helm-chart-converted/temp/task-executor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: task-executor
  name: task-executor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: task-executor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/service-network: "true"
        io.kompose.service: task-executor
    spec:
      containers:
        - args:
            - ./start-task-executor.sh
          image: jovianx/service-hub_application
          name: task-executor
          resources: {}
      restartPolicy: Always
status: {}
